[package]
name = "toml_to_json"
description = "Convert TOML to JSON"
license = "MIT"
version = "1.0"
authors = ["William Woodruff <william@yossarian.net>", "Robert Burnett"]
edition = "2021"
homepage = "https://github.com/woodruffw/toml2json"
readme = "README.md"
keywords = ["toml", "json"]
categories = ["development-tools", "encoding"]
rust-version = "1.66"

[package.metadata.release]
publish = false # handled by GitHub Actions
push = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[lib]
name = "toml_to_json"
crate-type = ["staticlib"]
